Iniciando testes de login

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=admin
 DB_NAME=banco_teste_automacao   
 DB_driver=mysql
 
-API_BASE_URL=http://localhost:8080
+API_BASE_URL=https://n8n.apptrix.app/webhook/a1841391-56ad-4a75-bfeb-e005b673c756
